--- a/theme/bethanien/css/menu.css
+++ b/theme/bethanien/css/menu.css
@@ -8,17 +8,23 @@ ng-include.ng-scope > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) > d
   background-repeat: repeat;
 }
 
+body {
+  color: white;
+}
+
 .texte {
   max-width: 860px;
   font-size: 1.1em;
   line-height: 1.4em;
-  margin: 200px auto;
+  padding-top: 1rem;
 }
 
 /* le titre du menu */
 h1 {
   margin-top: 10rem;
   padding-bottom: 5rem;
+  font-family: 'Playfair Display', Consolas;
+  font-size: 5rem;
 }
 
 h1::after { /* le trait bleu sous le titre */
@@ -26,7 +32,7 @@ h1::after { /* le trait bleu sous le titre */
   display: block;
   position: relative;
   left: 38%;
-  top: 10px;
+  top: 39px;
   width: 24%;
   height: 3px;
   background-color: #006BA8;
@@ -91,7 +97,7 @@ td.menu_price {
   background-color: hsl(42, 74%, 86%);
   box-shadow: hsl(225, 75%, 7%) 0 2px 3px;
   padding: 3rem 1rem 6rem 1rem;
-  margin: 2rem;
+  margin: 4rem 3rem;
 }
 .menuday .menuprice {
   position: relative;
