--- a/theme/bethanien/css/menu.css
+++ b/theme/bethanien/css/menu.css
@@ -1,3 +1,7 @@
+.cke_editable {
+  background: white;
+}
+
 /* le conteneur du menu */
 ng-include.ng-scope > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) > div:nth-child(1) {
   /* background-image: url("/dam?media-id=5bf6a796396588d3585e5a8b"), url("/dam?media-id=5bf6aa2d396588eb5c5e5a92");
