add rgpd for cluny

--- a/theme/cluny/templates/mails/reservationCLUNY.html
+++ b/theme/cluny/templates/mails/reservationCLUNY.html
@@ -90,6 +90,7 @@
   <p><b>Total :</b> { total } €<br><br></p>
   <p><b>Commentaires</b><br/>
   { remarks }</p>
+  <p>Politique de confidentialité acceptée : {rgpd}</p>
   
   
   </div>
