add rgpd for abuna faraj

--- a/theme/cte/templates/mails/reservationABFH.html
+++ b/theme/cte/templates/mails/reservationABFH.html
@@ -89,4 +89,6 @@
         25% for a children 7-12 years old<br/>
         25% for the meal for a children 7-12 years old</em></p>
 
+  <p>Politique de confidentialité acceptée : {rgpd}</p>
+
 </body></html>
