add uploadXLS block

--- a/theme/netforgod/templates/blocks/uploadXls.html
+++ b/theme/netforgod/templates/blocks/uploadXls.html
@@ -1,3 +1,5 @@
 <div ng-if="rubedo.current.user" ng-controller="uploadXlsController as ctrl">
     Coucou Upload Xls
+    <input type="file" id="file" name="file"/>
+    <button ng-click="uploadXLS()">Add</button>
 </div>
