add uploadXLS block

--- a/theme/netforgod/templates/blocks/uploadXls.html
+++ b/theme/netforgod/templates/blocks/uploadXls.html
@@ -1,5 +1,5 @@
 <div ng-if="rubedo.current.user" ng-controller="uploadXlsController as ctrl">
-    Coucou Upload Xls
+    Coucou Upload Excel
     <input type="file" id="file" name="file"/>
     <button ng-click="uploadXLS()">Add</button>
 </div>
