--- a/theme/netforgod/templates/blocks/uploadXls.html
+++ b/theme/netforgod/templates/blocks/uploadXls.html
@@ -1,7 +1,10 @@
 <div ng-if="rubedo.current.user" ng-controller="uploadXlsController as ctrl">
     Coucou Upload Excel
     <input type="file" id="file" name="file"/>
-    <button ng-click="uploadXLS()">Add</button>
+    <button ng-click="uploadXLS()">
+        <i class="fa fa-spinner fa-spin" ng-if="ctrl.loading"></i>
+        <span ng-else>Upload XLS file</span>
+    </button>
 
     <div class="logs">
         <div ng-repeat="el in ctrl.logs">
