add uploadXLS block

--- a/theme/netforgod/templates/blocks/uploadXls.html
+++ b/theme/netforgod/templates/blocks/uploadXls.html
@@ -2,7 +2,7 @@
     Coucou Upload Excel
     <input type="file" id="file" name="file"/>
     <button ng-click="uploadXLS()">
-        <i class="fa fa-spinner fa-spin" ng-if="ctrl.loading"></i>
+        <i class="fa fa-spinner fa-spin" ng-if="loading"></i>
         <span ng-else>Upload XLS file</span>
     </button>
 
