add uploadXLS block

--- a/theme/netforgod/templates/blocks/uploadXls.html
+++ b/theme/netforgod/templates/blocks/uploadXls.html
@@ -6,12 +6,12 @@
         <span ng-if="!loading">Upload XLS file</span>
     </button>
 
-    <div class="one_pn">
-        <div class="onesime_pn">
-            <select name="onesime_pn" ng-model="current_o_pn">
+    <div class="pn_compare">
+        <div class="pn_container onesime_pn">
+            <select name="onesime_pn" ng-model="current_pn_id" ng-change="loadPN()">
                 <option ng-repeat="pn in onesime_pns" ng-value="pn['Code PN']">{{pn['Code PN']}}</option>
             </select>
-            <table class="onesime_pn_fiche" ng-if="current_o_pn">
+            <table class="pn_fiche onesime_pn_fiche" ng-if="current_o_pn">
                 <tr ng-repeat="(key, value) in current_o_pn">
                     <td>{{key}}</td>
                     <td>{{value}}</td>
@@ -19,10 +19,16 @@
             </table>
         </div>
 
-        <div class="rubedo_pn">
-            <select name="rubedo_pn" id="">
+        <div class="pn_container rubedo_pn">
+            <select name="rubedo_pn" ng-model="current_pn_id" ng-change="loadPN()">
                 <option ng-repeat="pn in rubedo_pns" ng-value="pn.fields.pointNetId">{{pn.fields.pointNetId}}</option>
             </select>
+            <table class="pn_fiche rubedo_pn_fiche" ng-if="current_r_pn">
+                <tr ng-repeat="(key, value) in current_r_pn">
+                    <td>{{key}}</td>
+                    <td>{{value}}</td>
+                </tr>
+            </table>
         </div>
     </div>
 
@@ -32,3 +38,14 @@
         </div>
     </div>
 </div>
+
+<style>
+.pn_compare {
+    display: flex;
+    justify-content: center;
+}
+.pn_container {
+    width: 50%;
+    padding: 1rem;
+}
+</style>
