--- a/theme/netforgod/templates/blocks/uploadXls.html
+++ b/theme/netforgod/templates/blocks/uploadXls.html
@@ -12,8 +12,8 @@
                     Il y a <b>{{onesime_pns.length}}</b> Points Net importés depuis le fichier Excel.
             </div>
 
-            <select name="onesime_pn" ng-model="current_pn_id" ng-change="loadPN()">
-                <option ng-repeat="pn in onesime_pns" ng-value="pn['Code PN']">{{pn['Code PN']}}</option>
+            <select name="onesime_pn" ng-options="pn as pn['Code PN'] for pn in onesime_pns track by pn['Code PN']" ng-model="current_pn_id" ng-change="loadPN()">
+                <!-- <option ng-repeat="pn in onesime_pns" ng-value="pn['Code PN']">{{pn['Code PN']}}</option> -->
             </select>
 
             <table class="pn_fiche onesime_pn_fiche" ng-if="current_pn_id">
