--- a/theme/netforgod/templates/blocks/uploadXls.html
+++ b/theme/netforgod/templates/blocks/uploadXls.html
@@ -29,11 +29,11 @@
                 Il y a <b>{{rubedo_pns.length}}</b> Points Net sur Rubedo.
             </div>
 
-            <select name="rubedo_pn" ng-model="current_pn_id" ng-change="loadPN()">
-                <option ng-repeat="pn in rubedo_pns" ng-value="pn.fields.pointNetId">{{pn.fields.pointNetId}}</option>
+            <select name="rubedo_pn" ng-options="pn as pn.fields.pointNetId for pn in onesime_pns track by pn.fields.pointNetId" ng-model="current_pn_id" ng-change="loadPN()">
+                <!-- <option ng-repeat="pn in rubedo_pns" ng-value="pn.fields.pointNetId">{{pn.fields.pointNetId}}</option> -->
             </select>
             
-            <table class="pn_fiche rubedo_pn_fiche" ng-if="current_pn_id">
+            <table class="pn_fiche rubedo_pn_fiche" ng-if="current_pn_id != null">
                 <tr ng-repeat="(key, value) in current_r_pn">
                     <td>{{key}}</td>
                     <td>{{value}}</td>
