--- a/theme/netforgod/templates/blocks/uploadXls.html
+++ b/theme/netforgod/templates/blocks/uploadXls.html
@@ -12,11 +12,10 @@
                     Il y a <b>{{onesime_pns.length}}</b> Points Net importés depuis le fichier Excel.
             </div>
 
-            <select name="onesime_pn" ng-options="pn as pn['Code PN'] for pn in onesime_pns track by pn['Code PN']" ng-model="current_pn_id" ng-change="loadPN()">
-                <!-- <option ng-repeat="pn in onesime_pns" ng-value="pn['Code PN']">{{pn['Code PN']}}</option> -->
+            <select name="onesime_pn" ng-options="pn as pn['Code PN'] for pn in onesime_pns track by pn['Code PN']" ng-model="current_o_pn" ng-change="loadPN('onesime')">
             </select>
 
-            <table class="pn_fiche onesime_pn_fiche" ng-if="current_pn_id != null">
+            <table class="pn_fiche onesime_pn_fiche" ng-if="current_o_pn">
                 <tr ng-repeat="(key, value) in current_o_pn">
                     <td>{{key}}</td>
                     <td>{{value}}</td>
@@ -29,11 +28,11 @@
                 Il y a <b>{{rubedo_pns.length}}</b> Points Net sur Rubedo.
             </div>
 
-            <select name="rubedo_pn" ng-options="pn as pn.fields.pointNetId for pn in rubedo_pns track by pn.fields.pointNetId" ng-model="current_pn_id" ng-change="loadPN()">
+            <select name="rubedo_pn" ng-options="pn as pn.fields.pointNetId for pn in rubedo_pns track by pn.fields.pointNetId" ng-model="current_r_pn" ng-change="loadPN('rubedo')">
                 <!-- <option ng-repeat="pn in rubedo_pns" ng-value="pn.fields.pointNetId">{{pn.fields.pointNetId}}</option> -->
             </select>
             
-            <table class="pn_fiche rubedo_pn_fiche" ng-if="current_pn_id != null">
+            <table class="pn_fiche rubedo_pn_fiche" ng-if="current_r_pn">
                 <tr ng-repeat="(key, value) in current_r_pn">
                     <td>{{key}}</td>
                     <td>{{value}}</td>
