--- a/theme/netforgod/templates/blocks/uploadXls.html
+++ b/theme/netforgod/templates/blocks/uploadXls.html
@@ -35,7 +35,7 @@
             <table class="pn_fiche rubedo_pn_fiche" ng-if="current_r_pn">
                 <tr ng-repeat="(key, value) in current_r_pn.fields">
                     <td>{{key}}</td>
-                    <td ng-bind-html="value"></td>
+                    <td>{{value}}</td>
                 </tr>
             </table>
         </div>
