--- a/theme/cte/css/cte.less
+++ b/theme/cte/css/cte.less
@@ -979,7 +979,7 @@ header.content{
     background-size: cover;
     h1,h2,h3,h4,h5,p{color:white};
     height:320px;
-    box-shadow:inset 0 0 0 1000px rgba(84,84,84,.25);
+    /* box-shadow:inset 0 0 0 1000px rgba(84,84,84,.25); */
     margin-bottom:24px;
     line-height: 320px;
     text-align: center;
