--- a/theme/cte/templates/blocks/footer.html
+++ b/theme/cte/templates/blocks/footer.html
@@ -14,6 +14,7 @@
       <a rubedo-page-link="591c46903965884239346ebe">Cana - Pour mieux aimer</a><br />
       <a rubedo-page-link="562f32ff45205e453512ef7a">Jeunes 14-18 ans</a><br />
       <a rubedo-page-link="5b58863d396588a50761755e">Jeunes 18-30 ans</a><br />
+      <a rubedo-page-link="56d9c5dbc445ecfb008bab92">Nicodème Pro</a>
       <a rubedo-page-link="5b5f645e396588d76a12aa35">Jeunes professionnels</a><br />
       <!--<a rubedo-page-link="56bc90b9c445ecc61a8b4b4b">JET - Volontariat International</a><br />-->
       <a rubedo-page-link="56d9c1b7c445ecd2008baee7">Vie spirituelle et retraites</a><br>
