--- a/theme/cte/css/cte.less
+++ b/theme/cte/css/cte.less
@@ -195,7 +195,7 @@ span.glyphicon{margin: 0 5px; vertical-align: middle}
 @txt_light:#898989; // texte gris clair
 @menu:#2e2c29;// couleur de fond du menu par défaut
 @beigeCCN:#f3eeea; // beige fond
-@marron:#d5c5b5 ; // beige plus sombre
+@marron:hsla(30, 28%, 45%, 1) ; // beige plus sombre
 @rencontre:#7d77bf; //violet rencontres
 @lieux:#fbbd58; //jaune lieux communautaires
 @evenement:#f96847; //orange propositions;
@@ -1247,7 +1247,7 @@ ng-form[name="inscription_form"]{
     width:0; transition: all 0.3s ease-out ;border: 0;
   }
   input.montant-dons.displayed{
-    width:100px;  transition: all ease-out 0.3s; border:3px solid #fff;
+    width:300px;  transition: all ease-out 0.3s; border:3px solid #fff;
   }
   input.montant-dons.displayed.ng-invalid {
     border-color:@rouge;
@@ -1255,6 +1255,7 @@ ng-form[name="inscription_form"]{
     
   input.montant-dons::-webkit-input-placeholder {
        color: @marron;
+       font-style: italic;
   }
     
   input.montant-dons:-moz-placeholder { /* Firefox 18- */
