improve visibility donation amount

--- a/theme/cte/css/cte.less
+++ b/theme/cte/css/cte.less
@@ -195,7 +195,8 @@ span.glyphicon{margin: 0 5px; vertical-align: middle}
 @txt_light:#898989; // texte gris clair
 @menu:#2e2c29;// couleur de fond du menu par défaut
 @beigeCCN:#f3eeea; // beige fond
-@marron:hsla(30, 28%, 45%, 1) ; // beige plus sombre
+@marron:hsla(30, 28%, 77%, 1) ; // beige plus sombre
+@marron-dark: hsla(30, 28%, 45%, 1) ;
 @rencontre:#7d77bf; //violet rencontres
 @lieux:#fbbd58; //jaune lieux communautaires
 @evenement:#f96847; //orange propositions;
@@ -1230,7 +1231,7 @@ ng-form[name="inscription_form"]{
   label.sexe_label, input.montant-dons{
     background-color:transparent;
     height: 36px; width:36px;
-    color:@marron;
+    color:@marron-dark;
     border: 2px white solid;
     border-radius: 18px;
     line-height: 32px;
