--- a/theme/cte/templates/blocks/inscription.html
+++ b/theme/cte/templates/blocks/inscription.html
@@ -105,7 +105,7 @@
                             <div class="col-xs-12" ng-repeat="(paymentmode, value) in formCtrl.paymentmeans.paymentModes" ng-if="value">
                                     <input type="radio" name="modePaiement" ng-attr-id="{{paymentmode}}" ng-model="inscription.modePaiement" value={{paymentmode}} required>
                                     <label for="{{paymentmode}}">
-                                            {{rubedo.translate('Block.Inscription.Paf.'+paymentmode)}}
+                                            {{rubedo.translate('Block.Inscription.Paf.'+paymentmode, 'Cheques vacances')}}
                                     </label>
                             </div>                            
                         </div>  
