update salesianum email template

--- a/theme/cte/templates/mails/reservationSalesianum.html
+++ b/theme/cte/templates/mails/reservationSalesianum.html
@@ -4,6 +4,7 @@
 <table width="80%">
 <tr>
   <td> 
+    État Civil : { etat_civil }<br/>
     Prénom : { surname }<br/>
     Nom : { name }<br/>
     Sexe : { sexe }
