add fields to salesianum template email

--- a/theme/cte/templates/mails/reservationSalesianum.html
+++ b/theme/cte/templates/mails/reservationSalesianum.html
@@ -30,6 +30,32 @@
   </tr>
 </table>
 
+<h3 style="background: #e0dfdf;">Parent ou responsable légal</h3>
+<table width="80%">
+<tr>
+  <td> 
+    Prénom : { parent_surname }<br/>
+    Nom : { parent_name }<br/>
+  </td>
+  <td>
+    Tel : { parent_phone }<br/>
+    Email : { parent_email }
+  </td>
+ </tr>
+</table>
+
+<table width="80%">
+  <tr>
+    <td width="100"><b>Rue : </b></td><td>{ parent_street }</td>
+  </tr><tr>
+    <td width="100"><b>Ville : </b></td><td>{ parent_city }</td>
+  </tr><tr>
+    <td width="100"><b>Code postal : </b></td><td>{ parent_codepostal }</td>
+  </tr><tr>
+    <td width="100"><b>Pays : </b></td><td>{ parent_country }</td>
+  </tr>
+</table>
+
 <h3 style="background: #e0dfdf;">Le séjour</h3>
 <table width="80%">
   <tr >
