fix admin front ui

--- a/theme/cte/templates/blocks/contentContribution.html
+++ b/theme/cte/templates/blocks/contentContribution.html
@@ -11,7 +11,7 @@
 </style>
 <div ng-if="rubedo.current.user&&rubedo.current.user.rights.canContributeFO" ng-controller="ContentContributionController as ccCtrl" >
     <form ng-if="ccCtrl.contentType" class="form form-horizontal" ng-submit="ccCtrl.submitNewContent()">
-        <h3 ng-if="!ccCtrl.updateMode" class="text-left" ng-click="ccCtrl.showForm= !ccCtrl.showForm">
+        <h3 ng-if="!ccCtrl.updateMode" class="text-left" ng-click="ccCtrl.showForm= !ccCtrl.showForm" style="z-index: 9999999999;position: absolute;left: 25%;">
                 <span class="glyphicon glyphicon-plus cursor-as-pointer" style="font-size: 0.8em"></span>
                 {{rubedo.translate("Blocks.Contrib.Label.NewContent", "New Content")}} : {{ccCtrl.contentType.type}}
         </h3>
