new contentlist experiences

--- a/theme/cte/templates/blocks/contentList/experiences.html
+++ b/theme/cte/templates/blocks/contentList/experiences.html
@@ -1,1 +1,19 @@
-<h1>TEST</h1>
+<div ng-controller="ContentListController as contentListCtrl"></div>
+    <h1>TEST</h1>
+    <!-- MULTIPLE COLUMNS -->
+    <div ng-style="contentListCtrl.blockStyle" ng-class="{'container' : blockConfig.container}">
+        <div ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in contentListCtrl.contents" ng-switch="content.typeId"  class="col-xs-6 col-xxs-12" ng-class="contentListCtrl.columns">
+            <div class="list-item-img" ><!--ng-class="{'no-img':!content.fields.image}"-->
+                <!-- si le contenu a une image, on l'affiche dans la vignette -->
+                <img class="media-object pull-left" ng-if="content.fields.image"
+                             ng-src="{{ rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'400px',height:'266px',mode:'crop'}) }}"
+                             alt="{{ content.fields.text }}"/>
+                <!-- si le contenu n'a pas d'image définie, on affiche une image par défaut -->
+                <img class="media-object pull-left" ng-if="!content.fields.image"
+                            ng-src="{{ rubedo.imageUrl.getUrlByMediaId('57175694c445ecda008c4b31',{width:'400px',height:'266px',mode:'crop'}) }}"
+                            alt="{{ content.fields.text }}"/>
+            </div>
+            <p>MY ELEMENT</p>
+        </div>
+    </div>
+</div>
