new contentlist experiences

--- a/theme/cte/templates/blocks/contentList/experiences.html
+++ b/theme/cte/templates/blocks/contentList/experiences.html
@@ -29,4 +29,13 @@
         </div>
 
     </div>
+
+    <script>
+        $('.xp_ensavoirplus').click(function() {
+            $(this).next().addClass('show-xp-text');
+            $(this).next().click(function() {
+                $(this).removeClass('show-xp-text');
+            })
+        })
+    </script>
 </div>
