new contentlist experiences

--- a/theme/cte/templates/blocks/contentList/experiences.html
+++ b/theme/cte/templates/blocks/contentList/experiences.html
@@ -32,6 +32,7 @@
 
     <script>
         $(document).ready(function() {
+            console.log("nb xp = ", $('.xp_ensavoirplus').length);
             $('.xp_ensavoirplus').click(function() {
                 $(this).next().addClass('show-xp-text');
                 $(this).next().click(function() {
